completed user signin and signup

--- a/src/main/resources/view/login_form.fxml
+++ b/src/main/resources/view/login_form.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.carrent.layerd.controller.LoginFormController">
+<AnchorPane fx:id="loginMainAnchorPane" prefHeight="400.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.carrent.layerd.controller.LoginFormController">
    <children>
       <AnchorPane fx:id="anchorPaneColurSide" layoutX="450.0" prefHeight="400.0" prefWidth="257.0" style="-fx-background-color: #34495e;" AnchorPane.leftAnchor="450.0">
          <children>
@@ -83,7 +82,7 @@
             <TextField fx:id="txtName" layoutX="76.0" layoutY="117.0" prefHeight="7.0" prefWidth="242.0" promptText="name" />
             <TextField fx:id="txtEmail" layoutX="76.0" layoutY="151.0" prefHeight="7.0" prefWidth="242.0" promptText="email" />
             <TextField fx:id="txtUSerId" layoutX="76.0" layoutY="84.0" prefHeight="7.0" prefWidth="242.0" promptText="userId" />
-            <Button fx:id="btnSignIn" cache="true" layoutX="160.0" layoutY="276.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" style="-fx-background-color: #34495e;" text="SIGN IN" textFill="#f8f8f8">
+            <Button fx:id="btnSignIn" cache="true" layoutX="160.0" layoutY="276.0" mnemonicParsing="false" onAction="#btnSignInOnAction" prefHeight="25.0" prefWidth="98.0" style="-fx-background-color: #34495e;" text="SIGN IN" textFill="#f8f8f8">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
