--- a/src/main/resources/view/car_category_form.fxml
+++ b/src/main/resources/view/car_category_form.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -22,7 +24,7 @@
       </AnchorPane>
       <AnchorPane layoutY="50.0" prefHeight="534.0" prefWidth="730.0">
          <children>
-            <ImageView fitHeight="360.0" fitWidth="488.0" layoutX="163.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="360.0" fitWidth="488.0" layoutX="179.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/toppng.com-lets-adding-it-some-value-car-with-no-brand-810x372.png" />
                </image>
@@ -39,7 +41,7 @@
             </Label>
             <TextField fx:id="txtId" layoutX="111.0" layoutY="78.0" prefHeight="5.0" prefWidth="178.0" promptText="Car-Category-Id (CC0) " />
             <TextField fx:id="txtName" layoutX="111.0" layoutY="126.0" prefHeight="5.0" prefWidth="178.0" promptText="Car-Category-Name" />
-            <Button layoutX="558.0" layoutY="238.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Add" textFill="#fff7f7">
+            <Button layoutX="550.0" layoutY="222.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Add" textFill="#fff7f7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -57,12 +59,12 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="441.0" layoutY="238.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Update" textFill="#fff7f7">
+            <Button layoutX="439.0" layoutY="222.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Update" textFill="#fff7f7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
                <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="22.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../image/icons8-update-50.png" />
                      </image>
@@ -72,7 +74,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="324.0" layoutY="238.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Delet" textFill="#fff7f7">
+            <Button layoutX="319.0" layoutY="222.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Delet" textFill="#fff7f7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -83,6 +85,21 @@
                      </image>
                   </ImageView>
                </graphic>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <TableView fx:id="tblCarCategory" layoutX="108.0" layoutY="279.0" onMouseClicked="#getValue" prefHeight="200.0" prefWidth="422.0">
+              <columns>
+                <TableColumn fx:id="colId" prefWidth="90.0" text="Id" />
+                <TableColumn fx:id="colName" prefWidth="165.0" text="Name" />
+                  <TableColumn fx:id="colUserId" prefWidth="165.0" text="User Id" />
+              </columns>
+            </TableView>
+            <Button layoutX="641.0" layoutY="38.0" mnemonicParsing="false" onAction="#btnClear" style="-fx-background-color: #222f3e;" text="Clear" textFill="#fffefe">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
