--- a/src/main/resources/view/car_category_form.fxml
+++ b/src/main/resources/view/car_category_form.fxml
@@ -59,7 +59,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="439.0" layoutY="222.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Update" textFill="#fff7f7">
+            <Button layoutX="439.0" layoutY="222.0" mnemonicParsing="false" onAction="#btnUpdateCarCategoryOnAction" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Update" textFill="#fff7f7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -74,7 +74,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="319.0" layoutY="222.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Delet" textFill="#fff7f7">
+            <Button layoutX="319.0" layoutY="222.0" mnemonicParsing="false" onAction="#btnDeleteOnAction" prefHeight="32.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Delete" textFill="#fff7f7">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
