--- a/src/main/resources/view/main_form.fxml
+++ b/src/main/resources/view/main_form.fxml
@@ -76,6 +76,19 @@
                   <Image url="@../image/icons8-structural-96.png" />
                </image>
             </ImageView>
+            <Button layoutX="10.0" layoutY="215.0" mnemonicParsing="false" onAction="#btnCarDetailsOnAction" prefHeight="69.0" prefWidth="217.0" style="-fx-background-color: #34495e;" text="Car Details" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="35.0" fitWidth="39.0" layoutX="19.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-car-64.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Pane layoutX="234.0" layoutY="76.0" prefHeight="11.0" prefWidth="730.0" style="-fx-background-color: #34495e;" />
