--- a/src/main/resources/view/car_add_update_form.fxml
+++ b/src/main/resources/view/car_add_update_form.fxml
@@ -27,12 +27,12 @@
       <Label layoutX="300.0" layoutY="103.0" prefHeight="17.0" prefWidth="95.0" text="Number" />
       <Label layoutX="14.0" layoutY="215.0" prefHeight="17.0" prefWidth="54.0" text="Year" />
       <Label layoutX="300.0" layoutY="142.0" prefHeight="17.0" prefWidth="95.0" text="Price Per Day" />
-      <TextField fx:id="txtCarId" layoutX="75.0" layoutY="99.0" text="CI001" />
-      <TextField fx:id="txtBrand" layoutX="75.0" layoutY="138.0" prefHeight="3.0" prefWidth="149.0" text="BMW" />
-      <TextField fx:id="txtModel" layoutX="75.0" layoutY="175.0" text="G20" />
-      <TextField fx:id="txtYer" layoutX="75.0" layoutY="211.0" text="2018" />
-      <TextField fx:id="txtNumber" layoutX="411.0" layoutY="99.0" text="CBM-3251" />
-      <TextField fx:id="txtPricePerDay" layoutX="411.0" layoutY="138.0" text="4000" />
+      <TextField fx:id="txtCarId" layoutX="75.0" layoutY="99.0" />
+      <TextField fx:id="txtBrand" layoutX="75.0" layoutY="138.0" prefHeight="3.0" prefWidth="149.0" />
+      <TextField fx:id="txtModel" layoutX="75.0" layoutY="175.0" />
+      <TextField fx:id="txtYer" layoutX="75.0" layoutY="211.0" />
+      <TextField fx:id="txtNumber" layoutX="411.0" layoutY="99.0" />
+      <TextField fx:id="txtPricePerDay" layoutX="411.0" layoutY="138.0" />
       <Button layoutX="560.0" layoutY="220.0" mnemonicParsing="false" onAction="#btnAddOnAction" prefHeight="25.0" prefWidth="93.0" style="-fx-background-color: #222f3e;" text="Add" textFill="#fff7f7">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -81,15 +81,40 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <TableView fx:id="tblCar" layoutX="75.0" layoutY="265.0" onMouseClicked="#getValue" prefHeight="200.0" prefWidth="546.0">
-        <columns>
-          <TableColumn fx:id="colId" prefWidth="75.0" text="Car Id" />
-          <TableColumn fx:id="colCarCategoryId" prefWidth="94.0" text="CarCategory Id" />
-            <TableColumn fx:id="colBrand" prefWidth="94.0" text="Brand" />
-            <TableColumn fx:id="colModel" prefWidth="94.0" text="Model" />
-            <TableColumn fx:id="colNumber" prefWidth="94.0" text="Number" />
-            <TableColumn fx:id="colPriceperDay" prefWidth="94.0" text="Price per Day" />
-        </columns>
-      </TableView>
+      <Button layoutX="615.0" layoutY="53.0" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #222f3e;" text="Clear" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Button>
+      <AnchorPane fx:id="anchorPaneTbl" layoutX="92.0" layoutY="277.0" prefHeight="200.0" prefWidth="594.0">
+         <children>
+            <TableView fx:id="tblCar" layoutX="14.0" onMouseClicked="#getValue" prefHeight="200.0" prefWidth="546.0">
+              <columns>
+                <TableColumn fx:id="colId" prefWidth="75.0" text="Car Id" />
+                <TableColumn fx:id="colCarCategoryId" prefWidth="94.0" text="CarCategory Id" />
+                  <TableColumn fx:id="colBrand" prefWidth="94.0" text="Brand" />
+                  <TableColumn fx:id="colModel" prefWidth="94.0" text="Model" />
+                  <TableColumn fx:id="colNumber" prefWidth="94.0" text="Number" />
+                  <TableColumn fx:id="colPriceperDay" prefWidth="94.0" text="Price per Day" />
+              </columns>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <Label fx:id="lblShowDetails" layoutX="27.0" layoutY="252.0" onMouseClicked="#showAllDetailsOnAction" prefHeight="17.0" prefWidth="149.0" text="Show All Details" textFill="#0b07e4">
+         <font>
+            <Font size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
+      <Label fx:id="lblBack" layoutX="27.0" layoutY="253.0" onMouseClicked="#backOnAction" prefHeight="17.0" prefWidth="93.0" text="Backl" textFill="#0b07e4">
+         <font>
+            <Font size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
    </children>
 </AnchorPane>
