--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -47,7 +48,7 @@
       <TextField fx:id="txtName" layoutX="114.0" layoutY="121.0" promptText="Customer Name" />
       <TextField fx:id="txtDob" layoutX="114.0" layoutY="171.0" promptText="Customer Dob" />
       <TextField fx:id="txtNic" layoutX="516.0" layoutY="79.0" promptText="Customer Nic" />
-      <TextField fx:id="txtAddress" layoutX="114.0" layoutY="218.0" prefHeight="25.0" prefWidth="273.0" promptText="Customer Address" />
+      <TextField fx:id="txtAddress" layoutX="114.0" layoutY="218.0" prefHeight="25.0" prefWidth="223.0" promptText="Customer Address" />
       <Label layoutX="396.0" layoutY="137.0" prefHeight="19.0" prefWidth="93.0" text="Mobil Number">
          <font>
             <Font name="System Bold" size="13.0" />
@@ -59,7 +60,7 @@
             <Image url="@../image/car-image-transparent-background-22.png" />
          </image>
       </ImageView>
-      <Button layoutX="653.0" layoutY="171.0" mnemonicParsing="false" onAction="#btnAddMobileOnAction" style="-fx-background-color: #222f3e;" text="ADD" textFill="#fffafa">
+      <Button layoutX="675.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnAddMobileOnAction" style="-fx-background-color: #222f3e;" text="ADD" textFill="#fffafa">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -124,7 +125,7 @@
       </Label>
       <AnchorPane fx:id="anchorPaneTbl" layoutX="65.0" layoutY="312.0" prefHeight="200.0" prefWidth="568.0">
          <children>
-            <TableView fx:id="tblGetAllCustomer" prefHeight="200.0" prefWidth="581.0">
+            <TableView fx:id="tblGetAllCustomer" onMouseClicked="#getValues" prefHeight="200.0" prefWidth="581.0">
               <columns>
                 <TableColumn fx:id="colId" text="Cust Id" />
                 <TableColumn fx:id="colName" prefWidth="142.0" text="Name" />
@@ -135,5 +136,38 @@
             </TableView>
          </children>
       </AnchorPane>
+      <ComboBox fx:id="cmbMobiles" layoutX="403.0" layoutY="181.0" onAction="#cmbUpdateNumberOnAction" prefWidth="150.0" promptText="mobile numbers" />
+      <Label fx:id="labelUpdateNumber" layoutX="575.0" layoutY="185.0" onMouseClicked="#lblUpdateMoblePaneOnAction" prefHeight="17.0" prefWidth="100.0" text="Update number" textFill="#082cdd">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Label>
+      <AnchorPane fx:id="anchorPaneUpdateNumber" layoutX="365.0" layoutY="210.0" prefHeight="42.0" prefWidth="338.0">
+         <children>
+            <TextField fx:id="txtUpdateNumber" layoutX="14.0" layoutY="9.0" />
+            <Button layoutX="232.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateMobileOnAction" prefHeight="25.0" prefWidth="41.0" text="Upd">
+               <font>
+                  <Font size="11.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="177.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateAddMobileOnAction" prefHeight="25.0" prefWidth="41.0" text="Add">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Button layoutX="283.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnDeleteMobilOnAction" prefHeight="25.0" prefWidth="41.0" text="Del">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Label fx:id="lblUpdateBack" layoutX="577.0" layoutY="188.0" onMouseClicked="#lblBackUpdateNumberPaneOnAction" text="Back" textFill="#082cdd">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
    </children>
 </AnchorPane>
