--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -144,7 +144,7 @@
       <AnchorPane fx:id="anchorPaneUpdateNumber" layoutX="365.0" layoutY="210.0" prefHeight="42.0" prefWidth="338.0">
          <children>
             <TextField fx:id="txtUpdateNumber" layoutX="14.0" layoutY="9.0" />
-            <Button layoutX="232.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateMobileOnAction" prefHeight="25.0" prefWidth="41.0" text="Upd">
+            <Button layoutX="232.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateMobileOnAction" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #222f3e;" text="Upd" textFill="#fcf6f6">
                <font>
                   <Font size="11.0" />
                </font>
@@ -152,12 +152,12 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="177.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateAddMobileOnAction" prefHeight="25.0" prefWidth="41.0" text="Add">
+            <Button layoutX="177.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnUpdateAddMobileOnAction" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #222f3e;" text="Add" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <Button layoutX="283.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnDeleteMobilOnAction" prefHeight="25.0" prefWidth="41.0" text="Del">
+            <Button layoutX="283.0" layoutY="9.0" mnemonicParsing="false" onAction="#btnDeleteMobilOnAction" prefHeight="25.0" prefWidth="41.0" style="-fx-background-color: #222f3e;" text="Del" textFill="#f2f2f2">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -169,5 +169,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Label>
+      <Button layoutX="226.0" layoutY="268.0" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #222f3e;" text="Clear" textFill="#ffecec" />
    </children>
 </AnchorPane>
