--- a/src/main/resources/view/main_form.fxml
+++ b/src/main/resources/view/main_form.fxml
@@ -102,6 +102,19 @@
                   <Image url="@../image/icons8-customer-100.png" />
                </image>
             </ImageView>
+            <Button layoutY="385.0" mnemonicParsing="false" onAction="#btnRentOnAction" prefHeight="69.0" prefWidth="217.0" style="-fx-background-color: #34495e;" text="  Rent-Car" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="53.0" fitWidth="68.0" layoutX="10.0" layoutY="401.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-car-rental-80.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Pane layoutX="234.0" layoutY="76.0" prefHeight="11.0" prefWidth="730.0" style="-fx-background-color: #34495e;" />
