--- a/src/main/resources/view/car_rent_dashborad.fxml
+++ b/src/main/resources/view/car_rent_dashborad.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="585.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.carrent.layerd.controller.rent.RentDashboardController">
    <children>
       <Label alignment="CENTER" prefHeight="50.0" prefWidth="730.0" style="-fx-background-color: #487eb0;" text="RENT-CAR" textFill="#e8e8e8">
@@ -18,7 +17,7 @@
       </Label>
       <AnchorPane layoutY="50.0" prefHeight="44.0" prefWidth="730.0" style="-fx-background-color: #34495e;">
          <children>
-            <Button mnemonicParsing="false" onAction="#btnRentCarOnAction" prefHeight="36.0" prefWidth="279.0" style="-fx-background-color: #34495e;" text="Rent - Car" textFill="#f8f7f7">
+            <Button mnemonicParsing="false" onAction="#btnRentCarOnAction" prefHeight="39.0" prefWidth="200.0" style="-fx-background-color: #34495e;" text="Rent - Car" textFill="#f8f7f7">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
                </font>
@@ -26,12 +25,12 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="39.0" fitWidth="40.0" layoutX="43.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="31.0" fitWidth="31.0" layoutX="14.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/icons8-car-rental-100.png" />
                </image>
             </ImageView>
-            <Button layoutX="437.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="279.0" style="-fx-background-color: #34495e;" text="Car-Ren Details" textFill="#f8f7f7">
+            <Button layoutX="551.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="178.0" style="-fx-background-color: #34495e;" text="Car-Ren Details" textFill="#f8f7f7">
                <font>
                   <Font name="System Bold Italic" size="18.0" />
                </font>
@@ -39,9 +38,22 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
-            <ImageView fitHeight="39.0" fitWidth="50.0" layoutX="451.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="39.0" fitWidth="31.0" layoutX="542.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/icons8-car-rental-64.png" />
+               </image>
+            </ImageView>
+            <Button layoutX="250.0" layoutY="3.0" mnemonicParsing="false" onAction="#btnCarReturnOnAction" prefHeight="39.0" prefWidth="226.0" style="-fx-background-color: #34495e;" text="  Car-Return Details" textFill="#f8f7f7">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="31.0" fitWidth="37.0" layoutX="251.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-car-50.png" />
                </image>
             </ImageView>
          </children>
