--- a/src/main/resources/view/car_return_details.fxml
+++ b/src/main/resources/view/car_return_details.fxml
@@ -31,11 +31,12 @@
                   <Font name="System Bold Italic" size="14.0" />
                </font>
             </Label>
+            <TextField fx:id="txtCustomerId" layoutX="36.0" layoutY="9.0" onAction="#btnCustRentDetailsOnAction" promptText="CUSTID(Press Enter)" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorPaneTbl" layoutX="5.0" layoutY="285.0" prefHeight="200.0" prefWidth="721.0">
          <children>
-            <TableView fx:id="tblCar" layoutX="107.0" layoutY="14.0" prefHeight="172.0" prefWidth="507.0">
+            <TableView fx:id="tblCar" layoutX="124.0" layoutY="14.0" prefHeight="172.0" prefWidth="507.0">
               <columns>
                 <TableColumn fx:id="colRentId" prefWidth="75.0" text="Rent Id" />
                 <TableColumn fx:id="colCusId" prefWidth="88.0" text="Customer Id" />
@@ -44,9 +45,18 @@
                   <TableColumn fx:id="colReturnDate" prefWidth="108.0" text="Return Date" />
               </columns>
             </TableView>
+            <TableView fx:id="tblCustomer" layoutX="125.0" layoutY="13.0" prefHeight="172.0" prefWidth="507.0">
+              <columns>
+                <TableColumn fx:id="colRentId2" prefWidth="75.0" text="Rent Id" />
+                <TableColumn fx:id="colCarId" prefWidth="85.0" text="Car Id" />
+                  <TableColumn fx:id="colFromDate2" prefWidth="116.0" text="From Date" />
+                  <TableColumn fx:id="colToDate2" prefWidth="116.0" text="To Date" />
+                  <TableColumn fx:id="colReturnDate2" prefWidth="116.0" text="Return Date" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
-      <Label fx:id="lblCustomerRentDetails" layoutX="14.0" layoutY="79.0" prefHeight="17.0" prefWidth="235.0" text="2.   Customer Rent Details">
+      <Label fx:id="lblCustomerRentDetails" layoutX="14.0" layoutY="79.0" onMouseClicked="#lblCustomerRentDetailsOnAction" prefHeight="17.0" prefWidth="235.0" text="2.   Customer Rent Details">
          <font>
             <Font name="System Bold Italic" size="13.0" />
          </font>
@@ -54,6 +64,5 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Label>
-      <TextField fx:id="txtCustomerId" layoutX="27.0" layoutY="179.0" onAction="#btnCustRentDetailsOnAction" promptText="CUSTID(Press Enter)" />
    </children>
 </AnchorPane>
