--- a/src/main/resources/view/car_return_details.fxml
+++ b/src/main/resources/view/car_return_details.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -36,6 +37,17 @@
       </AnchorPane>
       <AnchorPane fx:id="anchorPaneTbl" layoutX="5.0" layoutY="285.0" prefHeight="200.0" prefWidth="721.0">
          <children>
+            <TableView fx:id="tblLateReturn" layoutX="52.0" prefHeight="200.0" prefWidth="618.0">
+              <columns>
+                <TableColumn fx:id="colRentId3" prefWidth="75.0" text="Rent Id" />
+                <TableColumn fx:id="colCustomerId3" prefWidth="75.0" text="Customer Id" />
+                  <TableColumn fx:id="colCarId3" prefWidth="75.0" text="Car Id" />
+                  <TableColumn fx:id="colFromDate3" prefWidth="101.0" text="From Date" />
+                  <TableColumn fx:id="colToDate3" prefWidth="101.0" text="To Date" />
+                  <TableColumn fx:id="colReturnDate3" prefWidth="101.0" text="ReturnDate" />
+                  <TableColumn fx:id="colLateDays3" prefWidth="88.0" text="Late Days" />
+              </columns>
+            </TableView>
             <TableView fx:id="tblCar" layoutX="124.0" layoutY="14.0" prefHeight="172.0" prefWidth="507.0">
               <columns>
                 <TableColumn fx:id="colRentId" prefWidth="75.0" text="Rent Id" />
@@ -64,5 +76,21 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Label>
+      <Label layoutX="14.0" layoutY="106.0" onMouseClicked="#lblLateDateOnAction" prefHeight="17.0" prefWidth="235.0" text="3.   Late Return Rent Details">
+         <font>
+            <Font name="System Bold Italic" size="13.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
+      <Button layoutX="624.0" layoutY="154.0" mnemonicParsing="false" onAction="#btnClearOnAction" style="-fx-background-color: #34495e;" text="Clear" textFill="WHITE">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
