--- a/src/main/resources/view/main_form.fxml
+++ b/src/main/resources/view/main_form.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="672.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.carrent.layerd.controller.MainFormController">
+<AnchorPane fx:id="rootNode" prefHeight="672.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.carrent.layerd.controller.MainFormController">
    <children>
       <AnchorPane fx:id="headerAnchorPane" prefHeight="78.0" prefWidth="815.0">
          <children>
@@ -115,6 +116,25 @@
                   <Image url="@../image/icons8-car-rental-80.png" />
                </image>
             </ImageView>
+            <Label fx:id="lblUserName" layoutX="14.0" layoutY="489.0" prefHeight="24.0" prefWidth="195.0" textFill="#f8f7f7">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
+            <Button layoutX="44.0" layoutY="535.0" mnemonicParsing="false" onAction="#btnSignOutOnAction" prefHeight="25.0" prefWidth="99.0" style="-fx-background-color: #34495e;" text="Sign Out" textFill="#f8f8f8">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <ImageView fitHeight="35.0" fitWidth="35.0" layoutX="19.0" layoutY="533.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-sign-out-50.png" />
+               </image>
+            </ImageView>
+            <Separator layoutX="12.0" layoutY="475.0" prefHeight="2.0" prefWidth="217.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
       </AnchorPane>
       <Pane layoutX="234.0" layoutY="76.0" prefHeight="11.0" prefWidth="730.0" style="-fx-background-color: #34495e;" />
